--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <title>List of Apps</title>
+    <title>Get Started</title>
+    <link rel="icon" href="/static/images/logo.ico" type="image/x-icon">
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100 border border-5 border-danger" style="border-radius:10px;background-image:url(/static/images/home.jpg);background-position: center;background-repeat: no-repeat;background-size: cover;">
     <div class="container-fluid d-flex col-md-12 opacity-100 justify-content-center align-items-center border border-white border-5 h-75 w-75" style="border-radius:10px;backdrop-filter: blur(3px);">
         <div class="row">
             <div class="col-md-12 text-white" style="color: white; font-weight: bold;">
-                <a class="btn btn-lg btn-primary" href="mainApp/">
+                <a class="btn btn-lg btn-primary" href="mainApp/login">
                     Let's Get Started
                 </a>
             </div>
