--- a/templates/mainApp/adminHome.html
+++ b/templates/mainApp/adminHome.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    {% csrf_token %}
     <div>
         Email : <strong>{{email}}</strong>
         <br>
