--- a/templates/mainApp/adminHome.html
+++ b/templates/mainApp/adminHome.html
@@ -1,74 +1,149 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-<body>
-    <h1>Student Form</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{studentform.as_p}}
-        <input type="submit" value="Submit">
-    </form>
-    <br> <br> <br> <br>
-    <h1>Marks Form</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{marksform.as_p}}
-        <input type="submit" value="Submit">
-    </form>
-    <br> <br> <br> <br>
-    <h1>Announcements Form</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{announcementsform.as_p}}
-        <input type="submit" value="Submit">
-    </form>
-    <br> <br> <br> <br>
-    <br> <br> <br> <br>
-    <hr>
-    <h1> Students </h1>
-    <ol>
-        {% for s in student %}
-        <li>
-            <p>{{s.name}}</p>
-            <br>
-        </li>
-        {% endfor %}
-    </ol>
-    <br> <br> <br> <br>
-    <hr>
-    <h1> Marks </h1>
-    <ol>
-        {% for m in marks %}
-        <li>
-            <p>{{m.student.name}}</p>
-            <p>{{m.subject1}} : {{m.marks1}}</p>
-            <p>{{m.subject2}} : {{m.marks2}}</p>
-            <p>{{m.subject3}} : {{m.marks3}}</p>
-            <br>
-        </li>
-        {% endfor %}
-    </ol>
-    <br> <br> <br> <br>
-    <hr>
-    <h1> Announcements </h1>
-    <ol>
-        {% for a in announcements %}
-        <li>
-            <p>{{a.title}}</p>
-            <p>{{a.description}}</p>
-            <p>{{a.date}}</p>
-            <br>
-        </li>
-        {% endfor %}
-    </ol>
-    <br> <br>
-    <a class="btn btn-primary" href="logout">Logout</a>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"
+        ></script>
+        <title>Document</title>
+    </head>
+    <body class="container-fluid d-flex flex-column">
+        <h1>Student Form</h1>
+        <form action="" method="post" class="row">
+            {% csrf_token %} {{studentform}}
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <input class="btn btn-primary" type="submit" value="Submit" />
+        </form>
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>Marks Form</h1>
+        <form action="" method="post" class="row">
+            {% csrf_token %} {{marksform}}
+            <br />
+            <br />
+            <br />
+            <br />
+            <input class="btn btn-primary" type="submit" value="Submit" />
+        </form>
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>Announcements Form</h1>
+        <form action="" method="post" class="row">
+            {% csrf_token %} {{announcementsform}}
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <input class="btn btn-primary" type="submit" value="Submit" />
+        </form>
+        <hr />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <hr />
+        <h1>Students</h1>
+        <ol>
+            {% for s in student %}
+            <li>
+                <p>{{s.name}}</p>
+                <br />
+            </li>
+            {% endfor %}
+        </ol>
+        <br />
+        <br />
+        <br />
+        <br />
+        <hr />
+        <h1>Marks</h1>
+        <ol>
+            {% for m in marks %}
+            <li>
+                <p>{{m.student.name}}</p>
+                <p>{{m.subject1}} : {{m.marks1}}</p>
+                <p>{{m.subject2}} : {{m.marks2}}</p>
+                <p>{{m.subject3}} : {{m.marks3}}</p>
+                <br />
+            </li>
+            {% endfor %}
+        </ol>
+        <br />
+        <br />
+        <br />
+        <br />
+        <hr />
+        <h1>Announcements</h1>
+        <ol>
+            {% for a in announcements %}
+            <li>
+                <p>{{a.title}}</p>
+                <p>{{a.description}}</p>
+                <p>{{a.date}}</p>
+                <br />
+            </li>
+            {% endfor %}
+        </ol>
+        <br />
+        <br />
+        <br />
+        <br />
+        <a class="btn btn-primary" href="logout">Logout</a>
+    </body>
 </html>
