--- a/templates/mainApp/login.html
+++ b/templates/mainApp/login.html
@@ -1,37 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <title>Login</title>
-    <link rel="icon" href="/static/images/logo.ico" type="image/x-icon">
-</head>
-<body class="d-flex justify-content-start align-items-center border border-5 border-white vh-100" style="border-radius:10px;background-image:url(/static/images/login.jpg);background-position: center;background-repeat: no-repeat;background-size: cover;">
-    {% csrf_token %}
-    <div class="container d-flex flex-column justify-content-center align-items-center border border-5 border-white h-50" style="border-radius: 10px;width:30%;margin:50px;">
-        <div class="row flex-row w-100 m-3">
-            <div class="col flex-column col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100">
-                <h1 class="w-100">
-                    <strong>
-                        Select Login Type
-                    </strong>
-                </h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"
+        ></script>
+        <title>Login</title>
+        <link rel="icon" href="/static/images/logo.ico" type="image/x-icon" />
+    </head>
+    <body
+        class="d-flex justify-content-start align-items-center border border-5 border-white vh-100"
+        style="
+            border-radius: 10px;
+            background-image: url(/static/images/login.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        "
+    >
+        {% csrf_token %}
+        <div
+            class="container d-flex flex-column justify-content-center align-items-center border border-5 border-white rounded-5 h-50 w-50 m-5"
+        >
+            <div class="row w-100 m-4"></div>
+            <div class="row w-100 m-3">
+                <div
+                    class="col col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100"
+                >
+                    <h1 class="w-100">
+                        <center>
+                            <strong> Select Login Type </strong>
+                        </center>
+                    </h1>
+                </div>
             </div>
-        </div>
-        <br><br>
-        <div class="row flex-row w-100 m-3">
-            <div class="col flex-column col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100">
-                <a href="studentLogin" class="btn btn-primary w-100">Student Login</a>
+            <br /><br />
+            <div class="row w-100 m-3">
+                <div
+                    class="col col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100"
+                >
+                    <a href="studentLogin" class="btn btn-primary w-100"
+                        >Student Login</a
+                    >
+                </div>
             </div>
-        </div>
-        <div class="row flex-row w-100 m-3">
-            <div class="col flex-column col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100">
-                <a href="adminLogin" class="btn btn-primary w-100">Admin Login</a>
+            <div class="row w-100 m-3">
+                <div
+                    class="col col-xxl-auto col-xl-auto col-lg-auto col-md-auto col-sm-auto w-100"
+                >
+                    <a href="adminLogin" class="btn btn-primary w-100"
+                        >Admin Login</a
+                    >
+                </div>
             </div>
+            <div class="row w-100 m-4"></div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
