--- a/templates/mainApp/studentHome.html
+++ b/templates/mainApp/studentHome.html
@@ -1,43 +1,104 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-<body class="d-flex justify-content-center align-items-baseline vh-100">
-    {% csrf_token %}
-    <div class="container d-flex flex-column justify-content-center h-100">
-        <div class="position-relative">
-            <a class="btn btn-primary position-absolute end-0 m-2" href="logout">Logout</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"
+        ></script>
+        <title>Document</title>
+        <link rel="icon" href="/static/images/logo.ico" type="image/x-icon" />
+    </head>
+    <body class="d-flex justify-content-center align-items-baseline vh-100">
+        {% csrf_token %}
+        <div class="container d-flex flex-column justify-content-center h-100">
+            <div class="position-relative">
+                <a
+                    class="btn btn-primary position-absolute end-5 m-2"
+                    href="changepassword"
+                    >Change Password</a
+                >
+                <a
+                    class="btn btn-primary position-absolute end-0 m-2"
+                    href="logout"
+                    >Logout</a
+                >
+            </div>
+            <br />
+            <div class="row mt-5 h-100">
+                <div class="col border border-5">
+                    <h1 style="font-size: 25px">
+                        Welcome, <br /><strong>{{ student.name }}</strong>
+                    </h1>
+                    <hr />
+                    <br />
+                    <p style="font-size: 25px" class="mt-5">
+                        Email : <br /><strong>{{student.email}}</strong>
+                    </p>
+                    <br />
+                    <p style="font-size: 25px" class="mt-5">
+                        Phone : <br /><strong>{{student.phone}}</strong>
+                    </p>
+                    <br />
+                    <p style="font-size: 25px" class="mt-5">
+                        Address : <br /><strong>{{student.address}}</strong>
+                    </p>
+                    <br />
+                </div>
+                <div class="col border border-5">
+                    <h1 style="font-size: 50px">Subject Marks</h1>
+                    <hr />
+                    <br />
+                    <p style="font-size: 30px" class="mt-5">
+                        <strong>{{marks.subject1}}</strong> :
+                        <strong>{{marks.marks1}}</strong>
+                    </p>
+                    <br />
+                    <p style="font-size: 30px" class="mt-5">
+                        <strong>{{marks.subject2}}</strong> :
+                        <strong>{{marks.marks2}}</strong>
+                    </p>
+                    <br />
+                    <p style="font-size: 30px" class="mt-5">
+                        <strong>{{marks.subject3}}</strong> :
+                        <strong>{{marks.marks3}}</strong>
+                    </p>
+                    <br />
+                </div>
+                <div class="col border border-5">
+                    <h1 style="font-size: 50px">Announcements</h1>
+                    <hr />
+                    <br />
+                    {% for a in announcements %}
+                    <p style="font-size: 30px" class="mt-5">
+                        <strong>{{a.title}}</strong> <br />
+                        <strong
+                            ><span style="white-space: pre"
+                                >{{a.description}}</span
+                            ></strong
+                        >
+                        <br />
+                        {{a.date}}
+                    </p>
+                    <br />
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-        <br>
-        <div class="row mt-5 h-100">
-            <div class="col border border-5">
-                <h1 style="font-size: 25px;">Welcome, <br><strong>{{ student.name }}</strong></h1> <hr><br>
-                <p style="font-size: 25px;" class="mt-5">Email : <br><strong>{{student.email}}</strong></p> <br>
-                <p style="font-size: 25px;" class="mt-5">Phone : <br><strong>{{student.phone}}</strong></p> <br>
-                <p style="font-size: 25px;" class="mt-5">Address : <br><strong>{{student.address}}</strong></p> <br>
-            </div>
-            <div class="col border border-5">
-                <h1 style="font-size: 50px;">Subject Marks</h1><hr>
-                <br>
-                <p style="font-size: 30px;" class="mt-5"><strong>{{marks.subject1}}</strong> : <strong>{{marks.marks1}}</strong></p> <br>
-                <p style="font-size: 30px;" class="mt-5"><strong>{{marks.subject2}}</strong> : <strong>{{marks.marks2}}</strong></p> <br>
-                <p style="font-size: 30px;" class="mt-5"><strong>{{marks.subject3}}</strong> : <strong>{{marks.marks3}}</strong></p> <br>
-            </div>
-            <div class="col border border-5">
-                <h1 style="font-size: 50px;">Announcements</h1><hr>
-                <br>
-                {% for a in announcements %}
-                    <p style="font-size: 30px;" class="mt-5"><strong>{{a.title}}</strong> <br> <strong>{{a.description}}</strong> <br> {{a.date}}</p><br>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-    <br> <br>
-</body>
+        <br />
+        <br />
+    </body>
 </html>
