--- a/templates/mainApp/changepassword.html
+++ b/templates/mainApp/changepassword.html
@@ -25,18 +25,62 @@
                 alert(messageValue);
             }
         </script>
+        <style>
+            .gradient-0 {
+                background: #2c3a47;
+                background: -webkit-linear-gradient(
+                    to right,
+                    rgba(44, 58, 71, 1),
+                    rgba(23, 47, 80, 1),
+                    rgba(35, 28, 61, 1),
+                    rgba(38, 30, 51, 1)
+                );
+                background: linear-gradient(
+                    to right,
+                    rgba(44, 58, 71, 1),
+                    rgba(23, 47, 80, 1),
+                    rgba(35, 28, 61, 1),
+                    rgba(38, 30, 51, 1)
+                );
+            }
+
+            .gradient-1 {
+                background: #6a11cb;
+                background: -webkit-linear-gradient(
+                    to right,
+                    rgba(106, 17, 203, 1),
+                    rgba(37, 117, 252, 1)
+                );
+                background: linear-gradient(
+                    to right,
+                    rgba(106, 17, 203, 1),
+                    rgba(37, 117, 252, 1)
+                );
+            }
+        </style>
         <title>Document</title>
         <link rel="icon" href="/static/images/logo.ico" type="image/x-icon" />
     </head>
-    <body class="container d-flex flex-column justify-content-center m-5">
-        <h1>Change Password</h1>
-        <form action="" method="post" class="row">
+    <body
+        class="container-fluid d-flex flex-column justify-content-center gradient-0"
+    >
+        <div class="m-5"></div>
+        <form
+            action=""
+            method="post"
+            class="row gradient-1 border border-light border-3 m-5 rounded-3"
+        >
+            <h1 class="m-3">Change Password</h1>
             {% csrf_token %} {{changepasswordform}}
             <br />
             <br />
             <br />
             <br />
-            <input class="btn btn-primary" type="submit" value="Submit" />
+            <input
+                class="btn btn-lg btn-success"
+                type="submit"
+                value="Change Password"
+            />
         </form>
     </body>
 </html>
