--- a/templates/mainApp/adminHome.html
+++ b/templates/mainApp/adminHome.html
@@ -72,7 +72,13 @@
         <link rel="icon" href="/static/images/logo.ico" type="image/x-icon" />
     </head>
     <body
-        class="container d-flex flex-column justify-content-center gradient-0"
+        class="container-fluid d-flex flex-column justify-content-center vh-100"
+        style="
+            background-image: url(/static/images/admin.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        "
     >
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
