--- a/templates/mainApp/manageMarks.html
+++ b/templates/mainApp/manageMarks.html
@@ -20,9 +20,12 @@
                 <td>{{m.marks3}}</td>
                 <td>
                     <center>
-                        <button class="btn btn-success w-100 h-100">
+                        <a
+                            class="btn btn-success w-100 h-100"
+                            href="manageMarks/update/{{m.id}}"
+                        >
                             Edit
-                        </button>
+                        </a>
                     </center>
                 </td>
             </tr>
