--- a/templates/mainApp/manageAnnouncements.html
+++ b/templates/mainApp/manageAnnouncements.html
@@ -21,16 +21,22 @@
                 <td>{{a.date}}</td>
                 <td>
                     <center>
-                        <button class="btn btn-success w-100 h-100">
+                        <a
+                            class="btn btn-success w-100 h-100"
+                            href="manageAnnouncements/update/{{a.id}}"
+                        >
                             Edit
-                        </button>
+                        </a>
                     </center>
                 </td>
                 <td>
                     <center>
-                        <button class="btn btn-danger w-100 h-100">
+                        <a
+                            class="btn btn-danger w-100 h-100"
+                            href="manageAnnouncements/delete/{{a.id}}"
+                        >
                             Delete
-                        </button>
+                        </a>
                     </center>
                 </td>
             </tr>
